// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NowPlayingCard > matches snapshot when paused 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-3.5 rounded-2xl relative overflow-hidden border border-[#1db95433] bg-[#121212] text-white shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-0.5"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative w-14 h-14 rounded-lg overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-lg object-cover scale-[1.012] transition-transform duration-[900ms] cubic-bezier-[0.22,0.61,0.36,1] hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-1.5"
    >
      <h3
        class="np-title font-extrabold leading-tight tracking-tight text-white text-base"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm text-[#b3b3b3] opacity-90 truncate"
      >
        Tester
      </p>
      <span
        aria-hidden="true"
        class="inline-flex self-start px-2 py-0.5 text-xs font-bold uppercase bg-gray-700 text-gray-300 rounded-full"
      >
        Paused
      </span>
      <div
        class="flex items-center gap-2 w-full"
      >
        <div
          class="flex-1 h-1.5 bg-[#2a2a2a] rounded-full overflow-hidden"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="180000"
            aria-valuemin="0"
            aria-valuenow="30000"
            class="h-full bg-[#1db954] rounded-full transition-all duration-200"
            role="progressbar"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="np-time text-xs text-[#b3b3b3] whitespace-nowrap tabular-nums"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;

exports[`NowPlayingCard > matches snapshot when playing 1`] = `
<a
  aria-label="Open in Spotify: Test Track"
  class="block w-full no-underline"
  href="https://open.spotify.com/track/play-1"
  rel="noopener noreferrer"
  target="_blank"
>
  <div
    class="nowplaying--spotify w-full grid grid-cols-[auto_1fr] items-center gap-x-4 gap-y-2 px-4 py-3.5 rounded-2xl relative overflow-hidden border border-[#1db95433] bg-[#121212] text-white shadow-lg hover:shadow-xl transition-all duration-300 hover:-translate-y-0.5"
    style="opacity: 1; transform: none;"
    tabindex="0"
  >
    <div
      class="relative w-14 h-14 rounded-lg overflow-hidden shadow-[0_8px_20px_rgba(0,0,0,0.35)]"
    >
      <img
        alt="Album"
        class="w-full h-full rounded-lg object-cover scale-[1.012] transition-transform duration-[900ms] cubic-bezier-[0.22,0.61,0.36,1] hover:scale-[1.02]"
        decoding="async"
        loading="lazy"
        referrerpolicy="no-referrer"
        src="https://example.com/cover.jpg"
      />
    </div>
    <div
      aria-live="polite"
      class="min-w-0 flex flex-col gap-1.5"
    >
      <h3
        class="np-title font-extrabold leading-tight tracking-tight text-white text-base"
      >
        Test Track
      </h3>
      <p
        class="np-art text-sm text-[#b3b3b3] opacity-90 truncate"
      >
        Tester
      </p>
      <div
        class="flex items-center gap-2 w-full"
      >
        <div
          class="flex-1 h-1.5 bg-[#2a2a2a] rounded-full overflow-hidden"
        >
          <div
            aria-label="Track progress"
            aria-valuemax="180000"
            aria-valuemin="0"
            aria-valuenow="30000"
            class="h-full bg-[#1db954] rounded-full transition-all duration-200"
            role="progressbar"
            style="width: 16.666666666666664%;"
          />
        </div>
        <span
          class="np-time text-xs text-[#b3b3b3] whitespace-nowrap tabular-nums"
        >
          0:30
           / 
          3:00
        </span>
      </div>
    </div>
  </div>
</a>
`;
